[package]
name = "psc"
version = "0.4.5"
edition = "2024"

[dependencies]
logos = "0.14"
chumsky = "0.9"
ariadne = "0.4"
clap = { version = "4.5", features = ["derive"] }
cranelift = "0.108"
cranelift-module = "0.108"
cranelift-jit = "0.108"
cranelift-object = "0.108"
cranelift-native = "0.108"
target-lexicon = "0.12"
